<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TFH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Iniciar Sesión</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_peliculas">Películas</string>
    <string name="menu_promociones">Promociones</string>
    <string name="menu_ubicacion">Ubicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Correo electrónico no válido</string>
    <string name="invalid_password">La contraseña debe de tener al menos 6 caracteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="userNombre">Nombre</string>
    <string name="userApellidos">Apellidos</string>
    <string name="userMail">Correo electrónico</string>
    <string name="userPassword">Contraseña</string>
    <string name="userPassword2">Repite la contraseña</string>
    <string name="tipo_de_documento">Tipo de documento</string>
    <string name="userNumeroDoc">Nº de documento</string>
    <string name="txtCondiciones">Estoy de acuerdo con el Aviso legal y </string>
    <string name="btnGuardarDatos">Guardar datos</string>
    <string name="txtUbicacion">Selecciona tu provincia y tu cine más cercano</string>
    <string name="txtProvincia">Provincia</string>
    <string name="txtComunidadAutonoma">Comunidad Autónoma</string>
    <string name="txtCine">Elige tu cine más cercano</string>
    <string name="btnGuardarUbicacion">Guardar mi ubicación</string>
    <string name="txtSeleccionarItem">Seleccione:</string>
    <string name="txtPromocion1">¡¡Reserva la sala para ti y los tuyos!!</string>
    <string name="texto1">Mínimo 20 personas</string>
    <string name="texto2">Precio</string>
    <string name="texto3">20 personas - 250€</string>
    <string name="texto5">Más información en taquilla</string>
    <string name="texto4">persona adicional - 12´50€</string>
    <string name="txtPromocion2">Con tu tarjeta TFH</string>
    <string name="texto6">2 palomitas grandes +</string>
    <string name="texto7">2 refrescos 75 cl</string>
    <string name="texto8">TODO por 10€</string>
    <string-array name="documentos">
        <item>Seleccione</item>
        <item>DNI</item>
        <item>NIE</item>
    </string-array>
    <string name="menu_cerrarAp">Cerrar aplicación</string>
    <string name="txtPrecio">Precio/ud</string>
    <string name="txtCantidad">Cantidad</string>
    <string name="txtInformacionEntradas">Utiliza tu tarjeta TFH para canjear</string>
    <string name="entrada_adulto">Adulto</string>
    <string name="numEntradas_adulto">0</string>
    <string name="entrada_familiar">Familiar</string>
    <string name="precio_adulto">5.90€</string>
    <string name="precio_familiar">28.50€</string>
    <string name="numEntradas_familiar">0</string>
    <string name="info_familiar">2Adt + 3Niñ</string>
    <string name="numEntradas_familiar2">0</string>
    <string name="precio_familiar2">33.40€</string>
    <string name="info_familiar2">2Adt + 4Niñ</string>
    <string name="entrada_joven">Joven</string>
    <string name="info_joven">(tarjeta/carnet)</string>
    <string name="numEntradas_joven">0</string>
    <string name="precio_joven">5.40€</string>
    <string name="entrada_nino">Niño</string>
    <string name="info_nino"><![CDATA[< 13 años]]></string>
    <string name="precio_nino">5.40€</string>
    <string name="numEntradas_nino">0</string>
    <string name="precio_senior">5.40€</string>
    <string name="numEntradas_senior">0</string>
    <string name="entrada_senior">Senior</string>
    <string name="info_senior"><![CDATA[> 65 años]]></string>
    <string name="descuento">Introduce tu TFH</string>
    <string name="txtTotal">Total (IVA incluido)</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="help">help</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="txt_titulo_peliculas">Películas</string>
    <string name="vista_grid">grid</string>
    <string name="protocolo_sanitario">Medidas frente al COVID-19</string>
    <string name="the_film_home">The Film Home</string>
    <string name="txt_infoInicio">Volvemos con más fuerza, más cine, más seguridad...</string>
    <string name="t_tulo">Título</string>
    <string name="categor_as_y_duraci_n">Categorías y duración</string>
    <string name="nombre_usuario">Nombre usuario:</string>
    <string name="numero_tarjeta">Nº Tarjeta:</string>
    <string name="saldo_actual">Saldo actual:</string>
    <string name="tarjeta_the_film_home">Tarjeta The Film Home</string>
    <string name="btn_pedirTarjeta">Pide aquí tu tarjeta</string>
    <string name="btn_consultarCondiciones">Política de privacidad</string>
    <string name="txtMisDatos1">¡Regístrate!</string>
    <string name="txtMisDatos2">Únete a nuestra comunidad</string>
    <string name="txtMisDatos3">y disfruta de las ventajas de ser socio</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="txt_titulo_iniciarSesion">Mi perfil</string>
    <string name="txt_titulo_promociones">Promociones</string>
    <string name="txt_titulo_ubicacion">Ubicación</string>
    <string name="txt_titulo_registro">Registrar Datos</string>
    <string name="txt_titulo_elegir_entradas">Elegir Entradas</string>
    <string name="txt_titulo_seleccionar_butacas">Seleccionar Butacas</string>
    <string name="txt_titulo_pagar_entradas">Pagar Entradas</string>
    <string name="userFechaNac">Fecha de nacimiento</string>
    <string name="tu_cuenta">Tu cuenta</string>
    <string name="datos_personales">Datos personales</string>
    <string name="Género">Género</string>
    <string name="preferencia_de_cine">Preferencia de cine</string>
    <string name="numero_de_documento">Nº Documento</string>
    <string name="sinopsis">Sinópsis</string>
    <string name="argumento_de_la_pelicula">Argumento de la película</string>
    <string name="director">Director</string>
    <string name="nombre_del_director">Nombre del director</string>
    <string name="reparto">Reparto</string>
    <string name="nombres_del_reparto">Nombres del reparto</string>
    <string name="pais">País</string>
    <string name="pais_de_origen">País de origen</string>
    <string name="estreno">Estreno</string>
    <string name="pelicula_butaca">Película:</string>
    <string name="cine_butaca">Cine:</string>
    <string name="fecha_butaca">Fecha:</string>
    <string name="sesion_butaca">Sesión:</string>
    <string name="sala_butaca">Sala:</string>
    <string name="entradas_butaca">Entradas:</string>
    <string name="userGenero">userGenero</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="no_binario">No Binario</string>
    <string name="tu_cine">Tu Cine</string>
    <string name="comprar">Comprar</string>
    <string name="lista_cines">Cines</string>
    <string name="btnAnterior">Anterior</string>
    <string name="butaca_seleccionada">Seleccionada</string>
    <string name="butaca_ocupada">Ocupada</string>
    <string name="butaca_libre">Libre</string>
    <string name="butaca_accesible">Accesible</string>
    <string name="butaca_inhabilitada">Inhabilitada</string>
    <string name="precioTotalEntradas">0.00€</string>
    <string name="numMaxEntradas">Puedes comprar 9 entradas máximo por transacción</string>
    <string name="txtPeliculas">Películas</string>
    <string name="genero_masculino">Masculino</string>
    <string name="genero_femenino">Femenino</string>
    <string name="genero_no_binario">No Binario</string>
    <string name="txtAceptarCondiciones">Acepto los </string>
    <string name="txt_pagar_con_tarjeta">Pagar con tarjeta</string>
    <string name="pantalla">PANTALLA</string>
    <string name="txtIvaEntradas">IVA incluído (10% entradas)</string>
    <string name="tus_entradas">Tus entradas</string>
    <string name="n_de_tarjeta">Nº de Tarjeta:</string>
    <string name="caducidad">Caducidad:</string>
    <string name="cvv">CVV:</string>
    <string name="importe">Importe</string>
    <string name="comercio">Comercio</string>
    <string name="fecha">Fecha</string>
    <string name="pagar">Pagar</string>
    <string name="datos_de_la_operaci_n">Datos de la operación</string>
    <string name="loginCompra_sesionSocios">¿Eres socio de The Film Home?</string>
    <string name="loginCompra_mensajeSocios">Inicia sesión para realizar la compra</string>
    <string name="registrarseCompra">Registrarse</string>
    <string name="comprar_sin_iniciar_sesi_n">Comprar sin iniciar sesión</string>
    <string name="continuar_compra">Continuar compra</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="qr">QR</string>
    <string name="consulta_tus_entradas"><b>¡Consulta tus Entradas!</b> <p>Autentícate como usuario cuando compres entradas y te las mostraremos aquí</p></string>
    <string name="autent_cate_como_usuario_cuando_compres_entradas_y_te_las_mostraremos_aqu">Autentícate como usuario cuando compres entradas y te las mostraremos aquí</string>
    <string name="pol_tica_de_privacidad">Política de Privacidad</string>
    <string name="txt_pagar_con_bizum">Pagar con bizum</string>
    <string name="txt_info_bizum">Introduce tu teléfono para <b>continuar con la compra.</b></string>
    <string name="tel_fono_registrado_en_bizum">Teléfono registrado en Bizum</string>
    <string name="informaci_n_pago_bizum">Información pago Bizum</string>
    <string name="introduce_tu_tel_fono">Introduce tu teléfono</string>
    <string name="no_olvides_tener_tu_m_vil_a_mano">No olvides tener tu móvil a mano</string>
    <string name="detalle_del_pago">Detalle del pago:</string>
    <string name="pago_100_seguro">Pago 100% seguro</string>
    <string name="estoy_de_acuerdo_con_la_pol_tica_de_privacidad">Estoy de acuerdo con la Política de Privacidad</string>
    <string name="condiciones_de_contrataci_n">Términos y condiciones</string>
    <string name="x">X</string>
</resources>