<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/txtMisDatos1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/txtMisDatos2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/txtMisDatos3" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/roboto_medium"
        android:backgroundTint="#5C5C5C"
        android:text="@string/btnIniciarSesion"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#5C5C5C"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnRegistrarse"
        android:textStyle="bold" />

</LinearLayout>