<?xml version="1.0" encoding="utf-8"?><!--Clase similar a Login que utilizamos para que un usuario que va a comprar una entrada pueda iniciar
sesión antes de comprar para que la entrada se guarde en la BBDD. Si el usuario no quiere iniciar sesión,
podrá comprar y obtendrá el pdf con la entrada pero no se guardará ningún registro en BBDD -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.peliculas.LoginCompra">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NavegationDrawer.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_loginCompra"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:popupTheme="@style/Theme.NavegationDrawer.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/loginCompra_sesionSocios"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/loginCompra_mensajeSocios"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!--Inicio Sesión SOCIOS-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_loginEmailCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:fontFamily="@font/roboto"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_loginPasswordCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="7"
                android:autofillHints=""
                android:fontFamily="@font/roboto"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <ImageButton
                android:id="@+id/btn_passwordShowCompra"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/userPassword"
                android:src="@drawable/ic_visibility" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLoginCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#D5D4D4"
            android:enabled="false"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txtMisDatos1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/txtMisDatos2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/txtMisDatos3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <!--Opciones de NO SOCIOS que QUIEREN REGISTRARSE-->
    <Button
        android:id="@+id/btnRegistroCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5C5C5C"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/registrarseCompra"
        android:textStyle="bold" />

    <!--Opciones de NO SOCIOS que NO QUIEREN REGISTRARSE-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/comprar_sin_iniciar_sesi_n"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnContinuarCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5C5C5C"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/continuar_compra"
        android:textStyle="bold" />

</LinearLayout>