<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        android:text="@string/protocolo_sanitario"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="477dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/protocolo_sanitario"
        android:src="@drawable/protocolo_sanitario" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/the_film_home"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_logo"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

</LinearLayout>